--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,11 @@ body {
 .cartao__conteudo {
     background-color: var(--card-front-color);
     text-align: center;
+    /* background-color: aquamarine; */
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+
 }
 
 .cartao__conteudo h3 {
@@ -51,6 +55,18 @@ body {
     color: var(--card-back-color);
     font-weight: 700;
 }
+
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+
+
+
+
+
+
+
+
 
 footer {
     background-color: black;
